gcc/testsuite/gdc.test/compilable/imports/test19187.d
module imports.test19187;
void test()() { }
alias foo = test;
alias foo = test;
