gcc/testsuite/gdc.test/fail_compilation/imports/test19107a.d
module imports.test19107a.d;

alias I(alias A) = A;
